2006-03-29  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* configure.in : compatibility improvements (OS X)

	* interfaces/python/*object.[ch], interfaces/python/error.h :
        some variables changed to static (compilation issues in OS X)

        * interfaces/python/graphobject.c : included common.h to make it
	compile with Python 2.3

	* tests/Makefile.am : added other.at

2006-03-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign.c : removed strndup for compatibility with Mac OS X
	
	* src/foreign-lgl-lexer.l, src/foreign-ncol-lexer.l : made
	mylineno static to avoid linking problems on Mac OS X

2006-03-27  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_complementer,
	igraphmodule_Graph_disjoint_union, igraphmodule_Graph_union,
	igraphmodule_Graph_intersection, igraphmodule_Graph_difference,
	igraphmodule_Graph_compose, igraphmodule_Graph_copy) : added
	
	* bootstrap.sh : can use glibtoolize instead of libtoolize
	(necessary on Mac OS X)

2006-03-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_id)
	(igraph_measure_dynamics_id_st) : added

	* src/measure_dynamics.c (igraph_measure_dynamics_idage) : start_vertex
	argument added

	* src/measure_dynamics.c (igraph_measure_dynamics_idage) : double free
	bug corrected

2006-03-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* debian/rules : added interrupt.h to Debian package
	* src/other.c (igraph_convex_hull) : updated documentation
	* configure.in, interfaces/python/Makefile.am : made them
	compatible with Fedora Core 3 (and possibly other platforms :))

2006-03-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/motifs.c (igraph_motifs_randesu_no) : added

2006-03-13  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/interrupt.h, src/interrupt.c : functions for interruption
	handling added
	* src/structural_properties.c (igraph_diameter) : progress
	handler and interruption handling added
	* src/igraph.h : now includes interrupt.h