@@ -1,3 +1,9 @@
+2006-03-31  Gabor Csardi  <csardi@kzoo.edu>
+
+	* src/measure_dynamics.c (igraph_measure_dynamics_id) : bugs corrected
+	* src/topology.c (igraph_isoclass_subgraph) : gcc 2.95 compatibility
+	bug corrected
+
 2006-03-29  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* configure.in : compatibility improvements (OS X)
